# spectral

./: .gitignore  BENCHMARKING.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONSTELLATION_AUDIT.md  CONTRIBUTING.md  Cargo.toml  FANOUT_FEASIBILITY.md  FEDERATION_AUDIT.md  NOTICE  README.md  RUN_NOTES.md  SECURITY.md
.claude/skills/verify/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  kuzu-abort-diagnostic.yml
benches/: METHODOLOGY.md  RESULTS.md
crates/spectral/: Cargo.toml
crates/spectral-archivist/: Cargo.toml
crates/spectral-archivist/src/: archivist.rs  candidates.rs  decay.rs  duplicates.rs  gaps.rs  lib.rs  main.rs  reclassify.rs  traits.rs
crates/spectral-archivist/tests/: archivist_tests.rs
crates/spectral-bench-accuracy/: Cargo.toml
crates/spectral-bench-accuracy/src/: actor.rs  consolidate.rs  dataset.rs  describe.rs  eval.rs  expansion.rs  ingest.rs  inspect.rs  judge.rs  lib.rs  main.rs  oracle.rs  pricing.rs  replay.rs  report.rs  retrieval.rs  retry.rs  run_notes.rs
crates/spectral-bench-accuracy/src/prompts/: assistant_recall.md  counting_current_state.md  counting_enumerate.md  factual_current_state.md  factual_direct.md  generic_fallback.md  preference.md  temporal.md
crates/spectral-bench-accuracy/tests/: neutrality.rs
crates/spectral-bench-real/: Cargo.toml  README.md  queries.toml
crates/spectral-bench-real/src/: main.rs
crates/spectral-cascade/: Cargo.toml
crates/spectral-cascade/src/: context.rs  lib.rs  orchestrator.rs  result.rs
crates/spectral-constellation/: Cargo.toml
crates/spectral-constellation/src/: lib.rs
crates/spectral-core/: Cargo.toml
crates/spectral-core/src/: device_id.rs  entity_id.rs  error.rs  identity.rs  lib.rs  visibility.rs
crates/spectral-graph/: Cargo.toml  README.md
crates/spectral-graph/examples/: query_brain.rs  try_brain.rs  try_brain_ontology.toml
crates/spectral-graph/src/: activity.rs  brain.rs  canonicalize.rs  cascade_layers.rs  error.rs  extract.rs  federation.rs  federation_recall.rs  graph_store.rs  kuzu_store.rs  lib.rs  ontology.rs  provenance.rs  ranking.rs  schema.rs  spreading.rs
crates/spectral-graph/tests/: aaak_tests.rs  brain_tests.rs  canonicalize_tests.rs  concurrency_tests.rs  crash_recovery_tests.rs  e2e_verification.rs  entity_policy_tests.rs  graph_store_tests.rs  ingest_text_tests.rs  kuzu_store_tests.rs  ontology_tests.rs  recall_short_query_tests.rs  recognize_tests.rs  reinforce_tests.rs  spectrogram_tests.rs  spreading_tests.rs
crates/spectral-graph/tests/fixtures/: brain_ontology.toml  test_ontology.toml
crates/spectral-ingest/: Cargo.toml  README.md
crates/spectral-ingest/src/: activity.rs  classifier.rs  federation_sync.rs  fingerprint.rs  ingest.rs  lib.rs  replicated_set.rs  signal.rs  signal_scorer.rs  sqlite_store.rs
crates/spectral-recognition/: Cargo.toml
crates/spectral-recognition/examples/: embedding_baseline.rs
crates/spectral-recognition/src/: eval.rs  extract.rs  lib.rs  minhash.rs  score.rs  store.rs  stream.rs
crates/spectral-spectrogram/: Cargo.toml  DESIGN.md
crates/spectral-spectrogram/src/: analyzer.rs  dimensions.rs  lib.rs  matching.rs  types.rs
crates/spectral-tact/: Cargo.toml  README.md
crates/spectral-tact/src/: classifier.rs  extractor.rs  lib.rs  prompts.rs
crates/spectral/benches/: retrieval.rs  vector_comparison.rs
crates/spectral/examples/: quickstart.rs
crates/spectral/src/: lib.rs  llm.rs
crates/spectral/tests/: brain_rebuild_co_retrieval.rs  brain_wrapper_delegation.rs
docs/: RESULTS.md  brain-db-inventory.md  operational-considerations.md  performance-audit-henry.md  pitch.md
docs/assets/: spectral-onepager.html
docs/internal/: BENCH_METHODOLOGY.md  BENCH_PREFLIGHT.md  COST_BENCHMARK.md  DISPATCH-permagent-activate-dormant-2026-07-14.md  DISPATCH-permagent-associative-recall-2026-07-15.md  DISPATCH-permagent-federation-reply-2026-07-19.md  DISPATCH-permagent-kuzu-collapse-2026-07-14.md  DISPATCH-permagent-librarian-2026-07-12.md  LAST_LOOK.md  MISSING_KEY_AUTOPSY.md  N500_FAILURE_ANALYSIS.md  ORACLE_TIER0.md  PERMAGENT_BENCHMARK_SPEC.md  PHASE0_RESULTS.md  RECOGNITION_BASELINE.md  RECOGNITION_ENGINE_DESIGN.md  RESIDUAL_FLOOR.md  ROLE_TOKEN_PROBE.md  SESSION_STATE_2026-07-12.md  SPECTROGRAM_AUDIT.md  TIER1_PORTER_WIDEN.md  TIER1_RESULTS.md  acr-lift-all-memory-types-2026-07-15.md  actor-counting-intervention-2026-07-12.md  actor-level-interventions-investigation.md  actor-prompt-refinement-proposal.md  backlog.md  bench-audit-2026-05-01.md  candidate-c-aggregation-v2.md  candidate-c-prevalidation.md  candidate-c-proposal.md  cascade-architecture-decision.md  cascade-fetch-mult-lever-2026-07-14.md  cascade-max-confidence-investigation.md  category-audit-2026-05-12.md  classifier-rachel-refinement.md  co-retrieval-ranking-proposal.md  cross-encoder-dense-rerank-2026-07-21.md  describe-structural-template-smoke.md  descriptions-in-actor-context-2026-07-11.md  (+42 more)
docs/internal/tickets/: coretrieval-regression.md
examples/: README.md  activity-capture.md  chat-memory.md
scripts/: locomo_to_oracle.py
