[workspace]
resolver = "2"
members = [
    "crates/spectral-core",
    "crates/spectral-ingest",
    "crates/spectral-graph",
    "crates/spectral-tact",
    "crates/spectral-spectrogram",
    "crates/spectral",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
authors = ["Alice Doe"]
repository = "https://github.com/make-tuned-unit/spectral"
homepage = "https://github.com/make-tuned-unit/spectral"
readme = "README.md"

[workspace.dependencies]
# Crypto + identity
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# String matching
strsim = "0.11"

# TACT / memory ingestion
sha2 = "0.10"
regex = "1"

# Errors + logging
thiserror = "2"
anyhow = "1"
tracing = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Storage
kuzu = "0.11"
rusqlite = { version = "0.31", features = ["bundled"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# System info
hostname = "0.4"

# Async (used by some crates)
tokio = { version = "1", features = ["full"] }

[profile.release]
lto = "thin"
codegen-units = 1
