[package]
name = "spectral-archivist"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Memory-quality maintenance for Spectral brains: dedup, gap detection, reclassification, decay, and consolidation candidate identification."

[[bin]]
name = "spectral-archivist"
path = "src/main.rs"

[dependencies]
rusqlite = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
