[package]
name = "spectral-bench-accuracy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Accuracy benchmarks for Spectral: LongMemEval_S and other standard agent memory evaluations."

[[bin]]
name = "spectral-bench-accuracy"
path = "src/main.rs"

[[bin]]
name = "spectral-audit"
path = "src/bin/audit.rs"

[dependencies]
spectral-core = { path = "../spectral-core" }
spectral-graph = { path = "../spectral-graph" }
spectral-ingest = { path = "../spectral-ingest" }
spectral-tact = { path = "../spectral-tact" }
spectral-cascade = { path = "../spectral-cascade" }
spectral-spectrogram = { path = "../spectral-spectrogram" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
blake3 = { workspace = true }
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
indicatif = "0.18"

[dev-dependencies]
tempfile = "3"
