[package]
name = "spectral-bench-real"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Benchmark harness for measuring Spectral recall latency and accuracy against real brains."

[[bin]]
name = "spectral-bench-real"
path = "src/main.rs"

[dependencies]
spectral-core = { path = "../spectral-core" }
spectral-graph = { path = "../spectral-graph" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
