[package]
name = "spectral-bench-real"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Benchmark harness for measuring Spectral recall latency and accuracy against real brains."

[[bin]]
name = "spectral-bench-real"
path = "src/main.rs"

[[bin]]
name = "phase0"
path = "src/bin/phase0.rs"

[[bin]]
name = "coret_ablation"
path = "src/bin/coret_ablation.rs"

[dependencies]
spectral-core = { path = "../spectral-core" }
spectral-graph = { path = "../spectral-graph" }
spectral-ingest = { path = "../spectral-ingest", features = ["sqlite"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
