[package]
name = "spectral-bench-real"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Benchmark harness for measuring Spectral recall latency and accuracy against real brains."

[[bin]]
name = "spectral-bench-real"
path = "src/main.rs"

[[bin]]
name = "phase0"
path = "src/bin/phase0.rs"

[[bin]]
name = "coret_ablation"
path = "src/bin/coret_ablation.rs"

[[bin]]
name = "poison_bench"
path = "src/bin/poison_bench.rs"

[[bin]]
name = "recognition_bench"
path = "src/bin/recognition_bench.rs"

[[bin]]
name = "recurrence_bench"
path = "src/bin/recurrence_bench.rs"

[[bin]]
name = "recall_debug"
path = "src/bin/recall_debug.rs"

[[bin]]
name = "anticipatory_bench"
path = "src/bin/anticipatory_bench.rs"

[dependencies]
chrono = { workspace = true }
spectral-core = { path = "../spectral-core" }
spectral-graph = { path = "../spectral-graph" }
spectral-ingest = { path = "../spectral-ingest", features = ["sqlite"] }
spectral-recognition = { path = "../spectral-recognition" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
