[package]
name = "spectral-cascade"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Cascade orchestrator for Spectral: ordered recognition layers with token budgets."

[dependencies]
spectral-ingest = { path = "../spectral-ingest" }
serde = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
