[package]
name = "spectral-cascade"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Recognition context and result types for Spectral's retrieval pipeline."

[dependencies]
spectral-ingest = { path = "../spectral-ingest" }
chrono = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
