[package]
name = "spectral-constellation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Constellation: signal-threshold pattern detection for Spectral."

[dependencies]
spectral-core = { path = "../spectral-core" }
spectral-graph = { path = "../spectral-graph" }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
