[package]
name = "spectral-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core primitives for Spectral: identity, content-addressed IDs, visibility levels."

[dependencies]
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
