[package]
name = "spectral-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Memory ingestion pipeline: classify, score, fingerprint, and store memories for TACT retrieval."

[dependencies]
spectral-core = { path = "../spectral-core" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true, optional = true }

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]

[dev-dependencies]
tokio = { workspace = true }
