[package]
name = "spectral-tact"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "TACT: classification and triplet extraction for Spectral memories."

[dependencies]
spectral-core = { path = "../spectral-core" }
spectral-graph = { path = "../spectral-graph" }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
