[package]
name = "spectral"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Spectral: a frequency-domain memory system for AI agents, designed for federation."
readme = "../../README.md"

[dependencies]
spectral-core = { path = "../spectral-core" }
spectral-ingest = { path = "../spectral-ingest" }
spectral-graph = { path = "../spectral-graph" }
spectral-tact = { path = "../spectral-tact" }
spectral-spectrogram = { path = "../spectral-spectrogram" }
anyhow = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true }

[features]
default = ["http-llm"]
http-llm = ["dep:reqwest"]

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "retrieval"
harness = false
