[package]
name = "spectral"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Deterministic, embedding-free memory for AI agents: recall, recognition, and adaptive feedback. Local-first and federation-ready, on one SQLite file — no vector DB, no LLM on the recall path."
readme = "../../README.md"
keywords = ["memory", "ai-agents", "llm", "retrieval", "recognition"]
categories = ["data-structures", "database", "text-processing"]

[dependencies]
spectral-core = { path = "../spectral-core" }
spectral-ingest = { path = "../spectral-ingest" }
spectral-cascade = { path = "../spectral-cascade" }
spectral-graph = { path = "../spectral-graph" }
spectral-tact = { path = "../spectral-tact" }
spectral-spectrogram = { path = "../spectral-spectrogram" }
spectral-recognition = { path = "../spectral-recognition" }
chrono = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true }

[features]
default = ["http-llm"]
http-llm = ["dep:reqwest"]

[dev-dependencies]
chrono = { workspace = true }
tempfile = "3"
wiremock = "0.6"
tokio = { workspace = true }
criterion = { workspace = true }
fastembed = { version = "5", default-features = false, features = ["ort-download-binaries-native-tls", "hf-hub-native-tls"] }

[[bench]]
name = "retrieval"
harness = false

[[bench]]
name = "vector_comparison"
harness = false
